Switch to http4k & classpath