@@ -3,7 +3,7 @@ ARG username=worker
 ARG gid=1000
 ARG uid=1001
 ARG work_dir=/home/$username/work
-ARG base_modules=java.base
+ARG base_modules=java.base,java.net.http
 ARG jre_dir=/opt/jre
 
 # Copy across all the build definition files in a separate stage
@@ -84,8 +84,6 @@ RUN --mount=type=cache,gid=$gid,uid=$uid,target=$work_dir/.gradle \
     --mount=type=cache,gid=$gid,uid=$uid,target=$gradle_cache_dir \
     if [ -f build/failed ]; then ./gradlew --offline build; fi
 
-RUN tar -xf build/child-projects/app/distributions/app.tar -C build/child-projects/app/distributions
-
 
 FROM eclipse-temurin:23_37-jdk-alpine AS small_jre_builder
 
@@ -116,6 +114,6 @@ USER $username
 RUN mkdir -p $work_dir
 WORKDIR $work_dir
 
-COPY --link --from=builder --chown=root:root $work_dir/build/child-projects/app/distributions/app/lib/ /opt/slack-github/
+COPY --link --from=builder --chown=root:root $work_dir/build/project/artifacts/lib/ /opt/slack-github/
 
-ENTRYPOINT [ "java", "--module-path", "/opt/slack-github", "-m", "slackgithub.app" ]
+ENTRYPOINT [ "java", "-XX:+UseZGC", "-jar", "/opt/slack-github/app.jar" ]
